package uml.course;

public abstract class Human {
  
  private String name;
  private String email;

  public Human(String name, String email) {
    this.name = name;
    this.email = email;
  }

  public String getName()  {
    return this.name;
  }

  public String getEmail()  {
    return this.email;
  }

}
