package uml.course;

public class Student extends Human {

  public Student(String name, String email) {
    super(name, email);
  } 
  
}
