package uml.course;

public class Teacher extends Human{

  public Teacher(String name, String email) {
    super(name, email);
  }

}
